# PiWatcher

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker-build.yml
piwatcher/base/: Dockerfile  pyproject.toml
piwatcher/base/piwatcher_base/: api.py  config.py  streaming.py  viewer.py
piwatcher/base/tests/: test_api.py  test_config.py  test_streaming.py  test_viewer.py
piwatcher/camera/: README.md  app.py  camera.py
piwatcher/camera/meida-server/: Dockerfile
