[project]
name = "piwatcher"
version = "0.1.0"
description = "A project for using Raspberry Pi's for home security"
readme = "README.md"
license = { text = "MIT License" }
authors = [{ name = "Bryan Ostdiek", email = "bostdiek@gmail.com" }]
requires-python = ">=3.11"

[tool.poetry]
name = "piwatcher"
version = "0.1.0"
description = "PiWatcher project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
piwatcher-base = { path = "piwatcher/base" }
piwatcher-camera = { path = "piwatcher/camera" }

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
